Implement wind
